--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
         "dequal": "^2.0.2",
         "framer-motion": "^6.3.0",
         "immer": "^9.0.12",
+        "markdown-to-jsx": "^7.1.7",
         "notistack": "^2.0.4",
         "react-hook-form": "^7.30.0",
         "react-intersection-observer": "^9.0.0",
