--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,10 @@
         "build": "tsc && tsc-alias"
     },
     "dependencies": {
+        "@fastify/cookie": "^6.0.0",
+        "@fastify/helmet": "^8.0.0",
+        "@fastify/nextjs": "^8.0.0",
+        "@fastify/rate-limit": "^6.0.0",
         "@fastify/session": "^8.1.0",
         "@meanie/mongoose-to-json": "^2.6.0",
         "@sinclair/typebox": "^0.23.4",
@@ -15,10 +19,6 @@
         "express-session": "^1.17.2",
         "fastify": "^3.28.0",
         "fastify-autoroutes": "^2.1.3",
-        "fastify-cookie": "^5.6.1",
-        "fastify-helmet": "^7.0.1",
-        "fastify-nextjs": "^7.2.0",
-        "fastify-rate-limit": "^5.8.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.3.1",
         "node-cron": "^3.0.0",
