--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
         "@fastify/session": "^8.1.0",
         "@meanie/mongoose-to-json": "^2.6.0",
         "@sinclair/typebox": "^0.23.4",
-        "axios-cache-adapter": "^2.7.3",
+        "axios": "^0.27.2",
+        "axios-cache-interceptor": "^0.10.2",
         "cheerio": "^1.0.0-rc.10",
         "connect-mongo": "^4.6.0",
         "country-code-lookup": "^0.0.20",
