--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
         "express-session": "^1.17.2",
         "fastify": "^3.28.0",
         "fastify-autoroutes": "^2.1.3",
+        "ioredis": "^5.0.4",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.3.1",
         "node-cron": "^3.0.0",
