redis in diff folder

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -16,6 +16,7 @@
         "^@routes/(.*)$",
         "^@jobs/(.*)$",
         "^@lib/(.*)$",
+        "^@redis(.*)$",
         "^[./]"
     ],
     "importOrderSeparation": true,
