--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
         "ioredis": "^5.0.4",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.3.2",
+        "nanoid": "^3.3.4",
         "node-cron": "^3.0.0",
         "nodemailer": "^6.7.5",
         "p-limit": "~3.1.0",
