--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -60,6 +60,6 @@ jobs:
 
             - name: Test build
               run: npm run build:all
-              with:
+              env:
                   REDIS_URL: ${{ secrets.REDIS_URL }}
                   RAWG_KEY: ${{ secrets.RAWG_KEY }}
